--- a/ProjectUbuild/Views/Home/Index.cshtml
+++ b/ProjectUbuild/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<section class="cover fullscreen image-slider slider-all-controls controls-inside parallax">
+﻿@{
+    ViewBag.Title = "Home";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<section class="cover fullscreen image-slider slider-all-controls controls-inside parallax">
     <ul class="slides">
         <li class="vid-bg image-bg overlay pt240 pb240">
             <div class="background-image-holder">
