--- a/ProjectUbuild/Views/Home/MyApplications.cshtml
+++ b/ProjectUbuild/Views/Home/MyApplications.cshtml
@@ -41,7 +41,7 @@
                     <ul class="tabs">
                         <li class="active">
                             <div class="tab-title">
-                                <span>Pending</span>
+                                <span>Processing</span>
                             </div>
                         </li>
                         <li class="">
@@ -56,7 +56,7 @@
                             <div class="tab-content">
                                 <p>
                                     <h4>
-                                        List of Pending applications
+                                        Status of Recent Loan application.
                                     </h4>
 
                                     @if (Model.currentLoanApplication != null)
