--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -10,8 +10,9 @@
     }
 }
 
-<script src="~/assets/plugins/jquery/jquery-1.11.1.min.js" type="text/javascript"></script>
+
 <script src="~/assets/plugins/pace/pace.min.js" type="text/javascript"></script>
+<script src="~/assets/plugins/jquery/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/modernizr.custom.js" type="text/javascript"></script>
 <script src="~/assets/plugins/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
@@ -43,8 +44,10 @@
 <script src="~/assets/plugins/jquery-sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/skycons/skycons.js" type="text/javascript"></script>
 <script src="~/assets/plugins/moment/moment.min.js"></script>
+<script src="~/Scripts/moment-with-locales.js"></script>
 <script src="~/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
 <script src="~/assets/plugins/bootstrap-daterangepicker/daterangepicker.js"></script>
+
 <script src="~/assets/plugins/bootstrap-timepicker/bootstrap-timepicker.min.js"></script>
 <script type="text/javascript" src="~/assets/plugins/jquery-autonumeric/autoNumeric.js"></script>
 <script type="text/javascript" src="~/assets/plugins/dropzone/dropzone.min.js"></script>
@@ -83,7 +86,7 @@
 <!-- BEGIN PAGE LEVEL JS -->
 
 <script src="~/assets/js/dashboard.js" type="text/javascript"></script>
-<script src="~/assets/js/scripts.js" type="text/javascript"></script>
+
 <script src="~/Scripts/angular.min.js"></script>
 <script src="~/Scripts/angular-ui-router.min.js"></script>
 <script src="~/Scripts/angular-animate.min.js"></script>
@@ -108,5 +111,5 @@ else if (route.IndexOf("/fullhouse/housedesign", StringComparison.Ordinal) > -1)
 {
     <script src="~/Scripts/app/HouseDesign.js"></script>
 }
-
+<script src="~/assets/js/scripts.js" type="text/javascript"></script>
 
