--- a/ProjectUbuild/Views/Loan/LoanDocs.cshtml
+++ b/ProjectUbuild/Views/Loan/LoanDocs.cshtml
@@ -41,34 +41,19 @@
                             <th>#</th>
                             <th>File Name</th>
                             <th>Description</th>
+                            <th>Upload Date</th>
                         </tr>
                     </thead>
                     <tbody>
+                    @foreach (var r in Model.loanDocuments)
+                    {
                         <tr>
-                            <td>1</td>
-                            <td>passport.jpg</td>
-                            <td>Passport Document</td>
+                            <td>@r.RecordId</td>
+                            <td>@r.DocumentPath</td>
+                            <td>@r.Description</td>
+                            <td>@r.CreatedDate.ToLongDateString()</td>
                         </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>passport.jpg</td>
-                            <td>Passport Document</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>passport.jpg</td>
-                            <td>Passport Document</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>passport.jpg</td>
-                            <td>Passport Document</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>passport.jpg</td>
-                            <td>Passport Document</td>
-                        </tr>
+                    }
                     </tbody>
                 </table>
             </div>
