get started page

--- a/ProjectUbuild/Views/FullHouse/Index.cshtml
+++ b/ProjectUbuild/Views/FullHouse/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "House selection";
     Layout = "../Shared/_Layout.cshtml";
 }
-  
+
 <section class="page-title page-title-2 image-bg overlay parallax" style="height:125px">
     <div class="background-image-holder fadeIn" style="transform: translate3d(0px, 0px, 0px); background: url(&quot;img/home10.jpg&quot;); top: -100px;">
         <img alt="Background Image" class="background-image" src="img/home10.jpg" style="display: none;">
@@ -12,15 +12,15 @@
     <div class="container-fluid">
         <div class="row" style="margin-top: 33px">
             <div class="col-md-6">
-                <h2 class="uppercase mb8" style="font-size:25px;line-height:25px">Choose your home</h2>
-                <p class="lead mb0">Choose the house of your choice </p>
+                <h2 class="uppercase mb8" style="font-size:25px;line-height:25px">Get Started</h2>
+                <p class="lead mb0">Choose a fully completed house or a phase to get started </p>
             </div>
             <div class="col-md-6 text-right hidden-xs hidden-sm">
                 <ol class="breadcrumb breadcrumb-2">
                     <li>
                         @Html.ActionLink("Home", "Index", "Home", new { }, null)
                     </li>
-                    <li class="active">Home Selection</li>
+                    <li class="active">Get Started</li>
                 </ol>
             </div>
         </div>
@@ -29,106 +29,135 @@
     <!--end of container-->
 </section>
 
-<section class="container-fluid" id="houseDesignWrapper" >
+<section class="container" id="houseDesignWrapper">
 
-    @for (int k = 0; k < Model.DesignRows.Count; k++)
-    {
-        <div class="row" style="margin-top: -85px">
-        @foreach (var design in Model.DesignRows[k].Designs)
-        {
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-body rh_prop_card">
-                        <div class="rh_prop_card__details row">
 
-                            <img src="~/images/HouseImages/@design.DesignImage" class="img-responsive" style="width: 100%" />
-                            <h3 style="margin-top: 15px">
-                                @Html.ActionLink(design.DesignName, "HouseDesign", "FullHouse", new { @id = design.RecordId }, new {  })
-                          
-                            </h3>
-                            <p class="text-info">@design.FullDescription</p>
-                            <!-- /.rh_prop_card__excerpt -->
+    <div class="card card-transparent ">
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs nav-tabs-fillup hidden-sm-down">
+            <li class="nav-item">
+                <a href="#" class="active" data-toggle="tab" data-target="#tab-fillup1"><span>Full House Option</span></a>
+            </li>
+            <li class="nav-item">
+                <a href="#" data-toggle="tab" data-target="#tab-fillup2"><span>Phase Option</span></a>
+            </li>
+        </ul>
+        <!-- Tab panes -->
+        <div class="tab-content">
+            <div class="tab-pane active" id="tab-fillup1">
+                <div class="row column-seperation">
+                    @for (int k = 0; k < Model.DesignRows.Count; k++)
+                    {
 
-@*                            <div class="rh_prop_card__meta_wrap row">*@
-@**@
-@*                                <div class="rh_prop_card__meta col-md-4">*@
-@*                                    <h4>*@
-@*                                        Bedrooms*@
-@*                                    </h4>*@
-@*                                    <div>*@
-@*                                        <svg class="rh_svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">*@
-@*                                            <defs>*@
-@*                                            </defs>*@
-@*                                            <path d="M1111.91,600.993h16.17a2.635,2.635,0,0,1,2.68,1.773l1.21,11.358a2.456,2.456,0,0,1-2.61,2.875h-18.73a2.46,2.46,0,0,1-2.61-2.875l1.21-11.358A2.635,2.635,0,0,1,1111.91,600.993Zm0.66-7.994h3.86c1.09,0,2.57.135,2.57,1l0.01,3.463c0.14,0.838-1.72,1.539-2.93,1.539h-4.17c-1.21,0-2.07-.7-1.92-1.539l0.37-3.139A2.146,2.146,0,0,1,1112.57,593Zm11,0h3.86a2.123,2.123,0,0,1,2.2,1.325l0.38,3.139c0.14,0.838-.72,1.539-1.93,1.539h-5.17c-1.21,0-2.07-.7-1.92-1.539L1121,594C1121,593.1,1122.48,593,1123.57,593Z" transform="translate(-1108 -593)"></path>*@
-@*                                        </svg>*@
-@*                                        <!-- <img src="php" alt=""/> -->*@
-@*                                        <span class="figure">2</span>*@
-@*                                    </div>*@
-@*                                </div> <!-- /.rh_prop_card__meta -->*@
-@**@
-@*                                <div class="rh_prop_card__meta col-md-4">*@
-@*                                    <h4>*@
-@*                                        Bathrooms*@
-@*                                    </h4>*@
-@*                                    <div>*@
-@*                                        <svg class="rh_svg" xmlns="http://www.w3.org/2000/svg" width="23.69" height="24" viewBox="0 0 23.69 24">*@
-@*                                            <path d="M1204,601a8,8,0,0,1,16,0v16h-2V601a6,6,0,0,0-12,0v1h-2v-1Zm7,6a6,6,0,0,0-12,0h12Zm-6,2a1,1,0,0,1,1,1v1a1,1,0,0,1-2,0v-1A1,1,0,0,1,1205,609Zm0,5a1,1,0,0,1,1,1v1a1,1,0,0,1-2,0v-1A1,1,0,0,1,1205,614Zm4.94-5.343a1,1,0,0,1,1.28.6l0.69,0.878a1,1,0,0,1-1.88.685l-0.69-.879A1,1,0,0,1,1209.94,608.657Zm2.05,4.638a1,1,0,0,1,1.28.6l0.35,0.94a1.008,1.008,0,0,1-.6,1.282,1,1,0,0,1-1.28-.6l-0.35-.939A1.008,1.008,0,0,1,1211.99,613.295Zm-11.93-4.638a1,1,0,0,1,.6,1.282l-0.69.879a1,1,0,1,1-1.87-.682l0.68-.88A1,1,0,0,1,1200.06,608.657Zm-2.05,4.639a1,1,0,0,1,.6,1.281l-0.34.941a1,1,0,0,1-1.88-.683l0.34-.94A1,1,0,0,1,1198.01,613.3Z" transform="translate(-1196.31 -593)"></path>*@
-@*                                        </svg>*@
-@*                                        <!-- <img src="php" alt=""/> -->*@
-@*                                        <span class="figure">1</span>*@
-@*                                    </div>*@
-@*                                </div> <!-- /.rh_prop_card__meta -->*@
-@**@
-@*                                <div class="rh_prop_card__meta col-md-4">*@
-@*                                    <h4>*@
-@*                                        Area*@
-@*                                    </h4>*@
-@*                                    <div>*@
-@*                                        <svg class="rh_svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">*@
-@*                                        <g>*@
-@*                                        <circle cx="2" cy="2" r="2"></circle>*@
-@*                                        </g>*@
-@*                                        <g>*@
-@*                                        <circle cx="2" cy="22" r="2"></circle>*@
-@*                                        </g>*@
-@*                                        <g>*@
-@*                                        <circle cx="22" cy="2" r="2"></circle>*@
-@*                                        </g>*@
-@*                                        <rect x="1" y="1" width="2" height="22"></rect>*@
-@*                                        <rect x="1" y="1" width="22" height="2"></rect>*@
-@*                                        <path opacity="0.5" d="M23,20.277V1h-2v19.277C20.7,20.452,20.452,20.7,20.277,21H1v2h19.277c0.347,0.596,0.984,1,1.723,1*@
-@*	                                    c1.104,0,2-0.896,2-2C24,21.262,23.596,20.624,23,20.277z"></path>*@
-@*                                    </svg>*@
-@*                                        <!-- <img src="php" alt=""/> -->*@
-@*$1$                                        <span class="figure">#1#*@
-@*$1$                                            4300 Sq Ft#1#*@
-@*$1$                                        </span>#1#*@
-@**@
-@*                                    </div>*@
-@*                                </div> <!-- /.rh_prop_card__meta -->*@
-@**@
-@*                            </div>*@
-                            <!-- /.rh_prop_card__meta_wrap -->
+                        foreach (var design in Model.DesignRows[k].Designs)
+                        {
+                            <div class="col-md-4">
+                                <div class="panel panel-default">
+                                    <div class="panel-body rh_prop_card">
+                                        <div class="rh_prop_card__details row">
 
-                            <div class="rh_prop_card__priceLabel row text-center">
+                                            <img src="~/images/HouseImages/@design.DesignImage" class="img-responsive" style="width: 100%" />
+                                            <h3 style="margin-top: 15px">
+                                                @Html.ActionLink(design.DesignName, "HouseDesign", "FullHouse", new { @id = design.RecordId }, new { })
 
-                                @*<h4 class="rh_prop_card__status">
-                                    For Sale
-                                </h4>*@
-                                <!-- /.rh_prop_card__type -->
-                                <h3 class="rh_prop_card__price text-success">
-                                    @design.ISOCode @design.BareDesignCost
-                                </h3>
-                                <!-- /.rh_prop_card__price -->
-                                @Html.ActionLink("Select", "HouseDesign", "FullHouse", new { @id = design.RecordId }, new { @class = "btn btn-default" })
+                                            </h3>
+                                            <p class="text-info">@design.FullDescription</p>
+
+                                            <div class="rh_prop_card__priceLabel row text-center">
+
+                                                @*<h4 class="rh_prop_card__status">
+                                                        For Sale
+                                                    </h4>*@
+                                                <!-- /.rh_prop_card__type -->
+                                                <h3 class="rh_prop_card__price text-success">
+                                                    @design.ISOCode @design.BareDesignCost
+                                                </h3>
+                                                <!-- /.rh_prop_card__price -->
+                                                @Html.ActionLink("Select", "HouseDesign", "FullHouse", new { @id = design.RecordId }, new { @class = "btn btn-default" })
+                                            </div>
+                                            <!-- /.rh_prop_card__priceLabel -->
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <!-- /.rh_prop_card__priceLabel --> 
-                        </div>
-                    </div>
+                        }
+
+                    }
                 </div>
             </div>
-        }
+            <div class="tab-pane" id="tab-fillup2">
+               
+                <div class="row" ng-controller="EligibilityCtrl" ng-init="init()">
+                    <div class="card-progress" data-ng-show="loading" style="background-color: rgba(255, 255, 255, 0.8); display: block;">
+                        <div class="progress-circle-indeterminate progress-circle-master"></div>
+                    </div>
+                    <p>
+                        <strong>U-Build</strong> <span class="text-master">Phase Option</span> helps you get a loan to complete a particular phase in your building project.<br/>
+                        Kindly choose the phase type and complete the form to check your eligibility and start your application process.
+                    </p>
+
+                    <div class="row" ng-init="builder.phaseType=builder.phase">
+                        <div class="col-md-6">
+                            <h2 class="fs-title" style="margin-bottom: 0">Choose Phase</h2>
+                            <div>
+                                <select class="" data-ng-model="builder.phase" data-ng-options="item.RecordId as item.PhaseName for item in buildingPhases">
+                                    <option value="">-Select Phase-</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" style="margin-top: 15px">
+                        <div class="col-md-6">
+                            <div class="form-group form-group-default input-group">
+                                <label for="houseEligibility" class="ng-binding">Please enter Loan Tenure.</label>
+                                <select data-ng-model="builder.loanTenure" id="loanTenure" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                                    <option value="">Select Loan Tenure</option>
+                                    <option data-ng-repeat="t in getTenureRange()" value="{{t}}">{{t}}</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group form-group-default ">
+                                <label>Choose Currency</label>
+                                <div class="radio radio-success">
+                                    <input type="radio" checked="checked" ng-model="builder.currency" name="currency" value="GHS" id="currencyGHS">
+                                    <label for="currencyGHS">GHS</label>
+                                    <input type="radio" ng-model="builder.currency" name="currency" id="currencyUSD" value="USD">
+                                    <label for="currencyUSD">USD</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group form-group-default input-group">
+                                <label for="houseEligibility_loanAmount" class="ng-binding">Please enter Loan Amount.</label>
+                                <input autocomplete="off" data-ng-model="builder.loanAmount" id="houseEligibility_loanAmount" placeholder="Loan Amount here" type="number" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group form-group-default input-group">
+                                <label for="houseEligibility" class="ng-binding">Please enter your monthly.</label>
+                                <input autocomplete="off" data-ng-model="builder.monthlyIncome" id="houseEligibility" placeholder="Monthly Income here" type="number" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                                <span data-ng-show="builder.loanTenure && builder.monthlyIncome" class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer; background: #ac5e81" data-ng-click="checkEligibility()">
+                                    Submit
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+
         </div>
-    }
+    </div>
+
+
+
 
 </section>
