--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -25,57 +25,56 @@
 
                     @if (Request.IsAuthenticated)
                     {
-                    @*<span>Welcome @User.Identity.Name </span>
-                        using (Html.BeginForm("Logoff", "Account", FormMethod.Post, new { style = "display:inline-block" }))
-                        {
-                            @Html.AntiForgeryToken()
-                            <input type="submit" value="Logout" class="btn btn-sm btn-filled" style="height: 28px;line-height: 28px" />
-                        }*@
+                        @*<span>Welcome @User.Identity.Name </span>
+                            using (Html.BeginForm("Logoff", "Account", FormMethod.Post, new { style = "display:inline-block" }))
+                            {
+                                @Html.AntiForgeryToken()
+                                <input type="submit" value="Logout" class="btn btn-sm btn-filled" style="height: 28px;line-height: 28px" />
+                            }*@
 
-                    <div class="d-flex align-items-center">
-                        <!-- START User Info-->
-                        <div class="pull-left p-r-10 fs-14 font-heading hidden-md-down">
-                            <span class="semi-bold">@User.Identity.Name</span>
-                        </div>
-                        <div class="dropdown pull-right hidden-md-down">
-                            <button class="profile-dropdown-toggle" type="button" style="padding-top: 5px" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="fa fa-user-circle fa-2x"></span>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right profile-dropdown" role="menu">
-                                @*<a href="#" class="dropdown-item"><i class="pg-settings_small"></i> Settings</a>*@
-                                <a href="@Url.Action("Index","Profile")" class="dropdown-item"><i class="pg-outdent"></i> My Profile</a>
+                        <div class="d-flex align-items-center">
+                            <!-- START User Info-->
+                            <div class="pull-left p-r-10 fs-14 font-heading hidden-md-down">
+                                <span class="semi-bold">@User.Identity.Name</span>
+                            </div>
+                            <div class="dropdown pull-right hidden-md-down">
+                                <button class="profile-dropdown-toggle" type="button" style="padding-top: 5px" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <span class="fa fa-user-circle fa-2x"></span>
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right profile-dropdown" role="menu">
+                                    @*<a href="#" class="dropdown-item"><i class="pg-settings_small"></i> Settings</a>*@
+                                    <a href="@Url.Action("Index","Profile")" class="dropdown-item"><i class="pg-outdent"></i> My Profile</a>
 
-                                @*<a href="#" class="dropdown-item"><i class="pg-signals"></i> Help</a>*@
+                                    <a href="https://www.directpay.online/login" class="dropdown-item" style="border:1px solid #f35958"><i class="fa fa-money"></i>Market Place</a>
 
-
-                                @using (Html.BeginForm("Logoff", "Account", FormMethod.Post, new { style = "display:inline-block;width:100%;margin-top:5px", @class = "clearfix  dropdown-item" }))
+                                    @using (Html.BeginForm("Logoff", "Account", FormMethod.Post, new { style = "display:inline-block;width:100%;margin-top:5px", @class = "clearfix  dropdown-item" }))
                                     {
-                                    @Html.AntiForgeryToken()
-                                    <button type="submit" value="Logout" style="height: 28px;line-height: 28px;padding:0 5px 0 5px">
-                                        <span class="pull-left">Logout</span>
-                                        <span class="pull-right"><i class="pg-power"></i></span>
-                                    </button>
+                                        @Html.AntiForgeryToken()
+                                        <button type="submit" value="Logout" style="height: 28px;line-height: 28px;padding:0 5px 0 5px">
+                                            <span class="pull-left">Logout</span>
+                                            <span class="pull-right"><i class="pg-power"></i></span>
+                                        </button>
                                     }
 
 
 
+                                </div>
                             </div>
-                        </div>
-                        <!-- END User Info-->
+                            <!-- END User Info-->
 
-                    </div>
+                        </div>
                     }
                     else
                     {
-                       @Html.ActionLink("Log In", "Login", "Account", null, new { @class = "btn btn-sm btn-filled", style = "margin-right:5px" })
-    <a href="https://www.directpay.online/login" class="btn btn-sm" style="border:1px solid #f35958">Market Place</a>
-@*                    @Html.ActionLink("Market Place", "Login", "Account", null, new { @class = "btn btn-sm ", style = "border:1px solid #f35958" })*@
+                        @Html.ActionLink("Log In", "Login", "Account", null, new { @class = "btn btn-sm btn-filled", style = "margin-right:5px" })
+                        <a href="https://www.directpay.online/login" class="btn btn-sm" style="border:1px solid #f35958">Market Place</a>
+                        @*                    @Html.ActionLink("Market Place", "Login", "Account", null, new { @class = "btn btn-sm ", style = "border:1px solid #f35958" })*@
                     }
 
 
                 </div>
             </div>
-            <div class="nav-bar" style="width: 100%">
+            <div class="nav-bar" style="width: 100%;clear: both">
                 <div class="module left">
                     <a href="/">
                         <svg style="width:76px;height:50px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 200">
@@ -113,7 +112,7 @@
                 <div class="module widget-handle mobile-toggle right visible-sm visible-xs">
                     <i class="ti-menu"></i>
                 </div>
-                <div class="module-group right" }>
+                <div class="module-group right">
                     <div class="module right">
                         <ul class="menu">
                             <li>
