--- a/ProjectUbuild/assets/foundry/css/custom.css
+++ b/ProjectUbuild/assets/foundry/css/custom.css
@@ -548,7 +548,7 @@ div.cs-skin-slide .cs-options ul li span {
 
 #houseDesignWrapper {
     /*min-height: 700px;*/
-    margin-top: 20px;
+    margin-top: -55px
 }
 
 #houseDesignWrapper .row { }
@@ -779,3 +779,21 @@ windows body, .windows p {
     margin-bottom: 0
 }
 
+.nav-tabs-fillup > li > a:after {
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+    background: none repeat scroll 0 0 #ce122e;
+    border: none;
+    content: "";
+    height: calc(100% + 1px);
+    left: 0;
+    position: absolute;
+    top: 0;
+    -webkit-transform: translate3d(0, 100%, 0px);
+    transform: translate3d(0, 100%, 0px);
+    -webkit-transition: -webkit-transform 0.3s ease 0s;
+    transition: transform 0.3s ease 0s;
+    width: 100%;
+    z-index: -1;
+}
