--- a/ProjectUbuild/Views/FullHouse/Index.cshtml
+++ b/ProjectUbuild/Views/FullHouse/Index.cshtml
@@ -96,7 +96,7 @@
                         Kindly choose the phase type and complete the form to check your eligibility and start your application process.
                     </p>
 
-                    <div class="row" ng-init="builder.phaseType=builder.phase">
+                    <div class="row" ng-init="">
                         <div class="col-md-6">
                             <h2 class="fs-title" style="margin-bottom: 0">Choose Phase</h2>
                             <div>
